packages/isar_community_generator/test/errors/id/duplicate.dart
// two or more properties with type "Id" defined

import 'package:isar-community/isar.dart';

@collection
class Test {
  Id? id1;

  Id? id2;
}
